# micro_ga

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
micro_ga/: __init__.py  layout.py  multivector.py
tests/: __init__.py  requirements.txt  test_clifford.py  test_creation.py  test_numpy.py  test_operations.py
